--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,11 +16,11 @@
     <div class="footer-right">
       <p class="mb-0">
         {% capture _platform %}
-          <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
+          <a href="https://jekyllrb.com" target="_blank" rel="noopener"></a>
         {% endcapture %}
 
         {% capture _theme %}
-          <a href="https://github.com/ConyersSchool/" target="_blank" rel="noopener">Chirpy</a>
+          <a href="https://github.com/ConyersSchool/" target="_blank" rel="noopener"></a>
         {% endcapture %}
 
       
